# ArguMem

./: README.md  argumem.db  main.py  pyproject.toml  source.py  test.py  test_argumem.db  test_playground.ipynb
ArguMem/: addSource.py  api.py  argumem.py  db.py  schema.sql
ArguMem/repositories/: database.py
ArguMem/services/: extraction.py
apps/api/: README.md  argumem.db  pyproject.toml  run.py
apps/api/src/api/: __init__.py  main.py
apps/web/: README.md  index.html  package.json
apps/web/src/: App.css  App.tsx
apps/web/src/components/: DatabaseInfo.tsx  MemoryForm.tsx  QuotationsList.tsx  SourcesList.tsx
src/api/: main.py
src/argumem/: __init__.py  argumem.py  db.py  schema.sql
src/argumem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/argumem/models/: schemas.py
src/argumem/prompts/: quote_extractor_system_prompt.md
src/argumem/repositories/: database.py
src/argumem/services/: extraction.py  text_processing.py
web/: package-lock.json
web/src/: App.css  App.tsx  index.css
web/src/components/: ApiKeyModal.css  ApiKeyModal.tsx  DatabaseInfo.tsx  MemoryForm.tsx  QuotationDetailView.tsx  QuotationsList.tsx  RecentItems.tsx  SourceDetailView.tsx  SourcesList.tsx
