[project]
name = "argumem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "api",
    "argumem-core",
]

[tool.uv.sources]
api = { workspace = true }
argumem-core = { workspace = true }

[tool.uv.workspace]
members = [
 "packages/argumem-core",
 "apps/api",
 "packages/ttestt",
]
