[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EliasSchlie", email = "EliasSchlie@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argumem-core",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
api = "api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
argumem-core = { workspace = true }
